Expand README with platform-specific run guide